# cpp-linter-rs

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cli.html  cli_args.html  cliff.toml  cpp_linter_rs.code-workspace  cspell.config.yml  genindex.html  index.html  justfile  main.rs  node.html  noxfile.py  nurfile  objects.inv  package.json  permissions.html  pr-review-caveats.html  print.html  pyproject.toml  python.html  searchindex.js  searchindex.json  sitemap.xml
.config/: .readthedocs.yaml  cliff.toml  nextest.toml
.doctrees/: cli_args.doctree  environment.pickle  index.doctree
.github/: common.nu  dependabot.yml
.github/install-clang-action/: action.yml
.github/workflows/: benchmark.yml  binary-builds.yml  build-docs.yml  bump-n-release.nu  bump-n-release.yml  bump_version.py  node-js-packaging.yml  perf-test.yml  perf_annotate.py  pre-commit-hooks.yml  pre-seed-versions.yml  python-packaging.yml  replace_version_spec.py  run-dev-tests.yml  stale.yml
_sources/: cli_args.rst.txt
benchmark/: benchmark.nu
bindings/node/: CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: CHANGELOG.md  Cargo.toml  README.md
bindings/python/cpp_linter/: __init__.py
bindings/python/src/: lib.rs
changelog/: index.html
clang-installer/: CHANGELOG.md  Cargo.toml  README.md  build.rs
clang-installer/src/: cli.rs  lib.rs  main.rs  progress_bar.rs  tool.rs  utils.rs  version.rs
clang-installer/src/downloader/: caching.rs  hashing.rs  mod.rs  pypi.rs  static_dist.rs
clang-installer/src/downloader/native_packages/: mod.rs  unix.rs  windows.rs
clang-installer/tests/: common.rs  pypi.rs  pypi_clang-format.json  static_dist.rs
clang-tools-manager/: CHANGELOG.md  Cargo.toml  README.md  build.rs
clang-tools-manager/src/: lib.rs  logger.rs  main.rs  progress_bar.rs  tool.rs  utils.rs  version.rs
clang-tools-manager/src/downloader/: hashing.rs  mod.rs  static_dist.rs
clang-tools-manager/src/downloader/native_packages/: mod.rs  unix.rs  windows.rs
clang-tools-manager/tests/: common.rs  pypi.rs  static_dist.rs
cli/: index.html
contributing/: index.html
cpp-linter/: CHANGELOG.md  CHANGELOG.old.md  Cargo.toml  README.md
cpp-linter-lib/: Cargo.toml  README.md
cpp-linter-lib/examples/: cli_doc.rs  diff.rs  gh_rest_api.rs
cpp-linter-lib/src/: cli.rs  common_fs.rs  git.rs  lib.rs  main.rs  run.rs
cpp-linter-lib/src/clang_tools/: clang_format.rs  clang_tidy.rs  mod.rs
cpp-linter-lib/src/cli/: mod.rs  structs.rs
cpp-linter-lib/src/common_fs/: file_filter.rs  mod.rs
cpp-linter-lib/src/rest_api/: github_api.rs  mod.rs
cpp-linter-lib/tests/: comments.rs  paginated_changed_files.rs  reviews.rs
cpp-linter-lib/tests/.hidden/: test_asset.txt
cpp-linter-lib/tests/comment_test_assets/: pr_22.diff  push_8d68756375e0483c7ac2b4d6bbbece420dbbb495.diff
cpp-linter-lib/tests/common/: mod.rs
cpp-linter-py/: Cargo.toml  README.md  pyproject.toml
cpp-linter-py/cpp_linter/: entry_point.py
cpp-linter-py/docs/: conf.py
cpp-linter-py/src/: lib.rs
cpp-linter/benches/: run.rs
cpp-linter/src/: common_fs.rs  error.rs  git.rs  lib.rs  logger.rs  main.rs  rest_client.rs  run.rs
cpp-linter/src/clang_tools/: clang_format.rs  clang_tidy.rs  mod.rs
cpp-linter/src/cli/: mod.rs  structs.rs
cpp-linter/src/common_fs/: file_filter.rs  mod.rs
cpp-linter/src/rest_api/: github_api.rs  mod.rs
cpp-linter/src/rest_api/github/: graphql.rs  mod.rs  serde_structs.rs  specific_api.rs
cpp-linter/src/rest_client/: mod.rs
cpp-linter/tests/: comments.rs  paginated_changed_files.rs  reviews.rs
cpp-linter/tests/comment_test_assets/: pr_comments_pg2.json  pr_diff.json  push_comments.json  push_diff.json
cpp-linter/tests/common/: mod.rs
cpp-linter/tests/reviews_test_assets/: pr_27.json
docs/: Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  book.toml  cli.yml  gen_cli_doc.py  license_gen.py  mkdocs.yml  pyproject.toml  requirements.txt
docs/docs/: index.md  node.md  other-licenses.md  python.md
docs/docs/changelog/: clang-installer.md  clang-tools-manager.md  cpp-linter-js.md  cpp-linter-py.md  cpp-linter.md
docs/docs/stylesheets/: extra.css
docs/src/: CHANGELOG.md  SUMMARY.md  cli.md  index.md  lib.rs  main.rs  node.md  permissions.md  pr-review-caveats.md  python.md
docs/theme/: pagetoc.css  pagetoc.js
install-clang-action/: README.md
node/: index.html
node-binding/: Cargo.toml  README.md  index.d.ts  package.json
node-binding/npm/darwin-x64/: README.md  package.json
node-binding/npm/linux-x64-gnu/: README.md  package.json
node-binding/npm/win32-x64-msvc/: README.md  package.json
node-binding/src/: lib.rs
other-licenses/: index.html
permissions/: index.html
pr-review-caveats/: index.html
py-binding/: Cargo.toml  README.md  pyproject.toml
py-binding/cpp_linter/: cpp_linter.pyi
py-binding/src/: lib.rs
python/: index.html
search/: search_index.json
stylesheets/: extra.css
theme/: pagetoc.js
