[package]
name = "clang-tools-manager"
version = "0.3.0"
description = "A utility for installing specific versions of clang-format and clang-tidy, used by cpp-linter."
readme = "README.md"
keywords = ["clang-tidy", "clang-format", "cpp-linter"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
authors.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
# Include a pre-seeded versions.json file in package published to crates.io.
# This is invalidated after 24 hours, but it allows docs.rs builds to succeed.
include = ["versions.json", "src/**", "Cargo.toml", "README.md", "build.rs", "tests/**"]

[[bin]]
path = "src/main.rs"
name = "clang-tools"
test = false
bench = false
required-features = ["bin"]

[dependencies]
anyhow = { workspace = true, optional = true }
blake2 = "0.10.6"
clap = { workspace = true, optional = true }
colored = { version = "3.1.1", optional = true }
directories = "6.0.0"
log = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
semver =  { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.9"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"], optional = true }
url = "2.5.8"
which = "8.0.2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
mockito = { workspace = true }
reqwest = { workspace = true, features = ["default-tls"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
bin = ["dep:clap", "dep:tokio", "dep:anyhow", "dep:colored"]

[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["default-tls", "blocking"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/clang-tools-manager/v{ version }/{ name }-{ target }{ archive-suffix }"
