[package]
name = "cpp-linter-lib"
edition = "2021"
repository = "https://github.com/cpp-linter/cpp_linter_rs/tree/main/cpp-linter-lib"
readme = "README.md"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = "4.5.17"
fast-glob = "0.4.0"
futures = "0.3.30"
git2 = "0.19.0"
lenient_semver = "0.4.2"
log = "0.4.22"
openssl = { version = "0.10", features = ["vendored"], optional = true }
openssl-probe = { version = "0.1", optional = true }
regex = "1.10.6"
reqwest = "0.12.7"
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"]}
tokio-macros = "2.4.0"
tokio-stream = "0.1.16"
which = "6.0.3"

[dev-dependencies]
mockito = "1.5.0"
tempfile = "3.12.0"

[features]
openssl-vendored = ["dep:openssl", "dep:openssl-probe"]

[[bin]]
name = "cpp-linter"
path = "src/main.rs"
test = false
bench = false
