[package]
name = "cpp-linter-py"
edition = "2021"
readme = "README.md"
repository = "https://github.com/cpp-linter/cpp_linter_rs/tree/main/cpp-linter-py"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cpp_linter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.3", features = ["extension-module"] }
cpp-linter-lib = { path = "../cpp-linter-lib" }
tokio = "1.40.0"

[features]
openssl-vendored = ["cpp-linter-lib/openssl-vendored"]
