[package]
name = "cpp-linter"
readme = "README.md"
keywords = ["clang-tidy", "clang-format", "linter", "cpp-linter"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
version = "2.0.0-rc15"
repository.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.89"
chrono = "0.4.44"
clang-installer = { path = "../clang-installer", version = "0.1.0" }
clap = { workspace = true, optional = true }
colored = { workspace = true, optional = true }
fast-glob = "1.0.1"
futures = "0.3.32"
git-bot-feedback = { version = "0.5.2", features = ["file-changes"] }
git2 = "0.20.4"
log = { workspace = true }
quick-xml = { version = "0.39.2", features = ["serialize"] }
regex = { workspace = true }
reqwest = { workspace = true }
semver =  { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
mockito = { workspace = true }
tempfile = { workspace = true }
git2 = { version = "0.20.4", features = ["https"]}

[features]
openssl-vendored = ["git2/vendored-openssl", "reqwest/native-tls-vendored"]
bin = ["reqwest/native-tls", "dep:clap", "dep:colored"]

[lib]
bench = false

[[bin]]
name = "cpp-linter"
path = "src/main.rs"
test = false
bench = false
required-features = ["bin"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }/v{ version }/{ bin }-{ target }{ archive-suffix }"
