[package]
name = "cpp-linter"
readme = "README.md"
keywords = ["clang-tidy", "clang-format", "linter", "cpp-linter"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
version = "2.0.0-rc.21"
repository.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, optional = true }
async-trait = "0.1.89"
chrono = "0.4.44"
clang-tools-manager = { path = "../clang-tools-manager", features = ["bin"], version = "0.3.1" }
clap = { workspace = true, optional = true }
fast-glob = "1.0.1"
futures = "0.3.32"
gix-imara-diff = { version = "0.2.2", features = ["unified_diff"] }
log = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
semver =  { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dependencies.git-bot-feedback]
version = "0.6.1"
features = ["file-changes"]
# path = "../../git-bot-feedback"
# git = "https://github.com/2bndy5/git-bot-feedback"
# branch = "git-diff-no-staged"

[dev-dependencies]
mockito = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true, features = ["default-tls"] }

[features]
bin = ["reqwest/default-tls", "dep:clap", "dep:anyhow"]

[lib]
bench = false

[[bin]]
name = "cpp-linter"
path = "src/main.rs"
test = false
bench = false
required-features = ["bin"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/cpp-linter/v{ version }/{ name }-{ target }{ archive-suffix }"
