
[package]
name = "cli-gen"
edition = "2021"
version = "0.1.0"
description = "A mdbook pre-processor that generates a CLI doc from source code."
repository = "https://github.com/cpp-linter/cpp-linter-rs/tree/main/docs"
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
cpp-linter = { path = "../cpp-linter" }
clap = "4.5.17"
mdbook = "0.4.40"
semver = "1.0.23"
serde_json = "1.0.128"

[[bin]]
name = "cli-gen"
path = "src/main.rs"
