
[package]
name = "cli-gen"
edition = "2021"
version = "0.0.0"
description = "A function exposed in python that generates a CLI doc from rust source code."
repository = "https://github.com/cpp-linter/cpp-linter-rs/tree/main/docs"
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
cpp-linter = { path = "../cpp-linter" }
pyo3 = "0.22.3"

[lib]
name = "cli_gen"
crate-type = ["cdylib"]
