[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "cli-gen"
description = "Generate cpp-linter CLI doc from rust src."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Brendan Doherty", email = "2bndy5@gmail.com" },
]
classifiers = ["Private :: Do Not Upload"]
dynamic = ["version"]

[dependency-groups]
dev = [
    "maturin==1.10.1",
    "mypy==1.18.2",
    "patchelf==0.17.2.2 ; sys_platform == 'linux'",
    "ruff==0.14.4",
]
docs = [
    "markdown-gfm-admonition==0.1.1",
    "mkdocs==1.6.1",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-include-markdown-plugin==7.2.0",
    "mkdocs-material==9.7.0",
    "pyyaml==6.0.3",
]

[tool.uv]
default-groups = "all"
reinstall-package = ["cli-gen"]
