[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "cli-gen"
description = "Generate cpp-linter CLI doc from rust src."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Brendan Doherty", email = "2bndy5@gmail.com" },
]
classifiers = ["Private :: Do Not Upload"]
dynamic = ["version"]

[dependency-groups]
dev = [
    "maturin==1.11.5",
    "mypy==1.19.1",
    "patchelf==0.17.2.2 ; sys_platform == 'linux'",
    "ruff==0.14.13",
]
docs = [
    "markdown-gfm-admonition==0.3.0",
    "mkdocs==1.6.1",
    "mkdocs-gen-files==0.6.0",
    "mkdocs-include-markdown-plugin==7.2.0",
    "mkdocs-material==9.7.1",
    "pyyaml==6.0.3",
]

[tool.uv]
default-groups = "all"
reinstall-package = ["cli-gen"]
