[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "cli-gen"
description = "Generate cpp-linter CLI doc from rust src."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Brendan Doherty", email = "2bndy5@gmail.com" },
]
classifiers = ["Private :: Do Not Upload"]
dynamic = ["version"]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "ruff==0.15.16",
]
docs = [
    "markdown-gfm-admonition==0.3.0",
    "mkdocs==1.6.1",
    "mkdocs-gen-files==0.6.0",
    "mkdocs-include-markdown-plugin==7.2.0",
    "mkdocs-material==9.7.6",
    "pyyaml==6.0.3",
]

[tool.uv]
default-groups = "all"
reinstall-package = ["cli-gen"]
