[package]
name = "cpp-linter-py"
edition = "2021"
readme = "README.md"
repository = "https://github.com/cpp-linter/cpp-linter-rs/tree/main/py-binding"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cpp_linter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.4", features = ["extension-module"] }
cpp-linter = { path = "../cpp-linter" }
tokio = "1.40.0"

[features]
openssl-vendored = ["cpp-linter/openssl-vendored"]
