[package]
name = "cpp-linter-js"
readme = "README.md"
keywords = ["clang-tidy", "clang-format", "linter"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
repository = "https://github.com/cpp-linter/cpp-linter-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.7.1", default-features = false, features = ["napi4", "async"] }
napi-derive = "3.4.1"
cpp-linter = { path = "../../cpp-linter" }
anyhow = "1.0.100"

[features]
openssl-vendored = ["cpp-linter/openssl-vendored"]

[build-dependencies]
napi-build = "2.2.3"
