[package]
name = "cpp-linter-py"
readme = "README.md"
repository = "https://github.com/cpp-linter/cpp-linter-rs/tree/main/bindings/python"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cpp_linter"
crate-type = ["cdylib"]
bench = false

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py39"] }
cpp-linter = { path = "../../cpp-linter" }
tokio = "1.49.0"

[features]
openssl-vendored = ["cpp-linter/openssl-vendored"]
