[package]
name = "cpp-linter-py"
readme = "README.md"
repository = "https://github.com/cpp-linter/cpp-linter-rs/tree/main/bindings/python"
version = "2.0.0-rc15"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cpp_linter"
crate-type = ["cdylib"]
bench = false

[dependencies]
pyo3 = { workspace = true, features = ["abi3-py39"] }
cpp-linter = { path = "../../cpp-linter", features = ["bin"] }
tokio = { workspace = true }

[features]
openssl-vendored = ["cpp-linter/openssl-vendored"]
